Refactor and adding RBAC

--- a/quarkus-portfolio/src/main/resources/application.properties
+++ b/quarkus-portfolio/src/main/resources/application.properties
@@ -18,3 +18,10 @@ quarkus.openshift.env.mapping.IEX_API_KEY.with-key=IEX_API_KEY
 quarkus.swagger-ui.always-include=true
 openshift.labels[0].key=app.kubernetes.io/part-of
 openshift.labels[0].value=Quarkus-DayTrader
+# KC WebConsole --> Realm Settings --> OpenId Configuration #issuer
+#TODO cluster DNS
+quarkus.oidc.auth-server-url=https://keycloak-keycloak.apps.aws.devx.red/auth/realms/quarkus-demos
+# If its frontend put real client-id
+quarkus.oidc.client-id=tradr
+# service does not do redirect
+quarkus.oidc.application-type=service
