--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,13 @@
     <module>quarkus-stock-quote</module>
     <module>quarkus-portfolio</module>
   </modules>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.ec4j.maven</groupId>
+        <artifactId>editorconfig-maven-plugin</artifactId>
+        <version>0.0.11</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
