--- a/tradr/.gitignore
+++ b/tradr/.gitignore
@@ -1,38 +1,16 @@
-#       Copyright 2017 IBM Corp All Rights Reserved
-
-#   Licensed under the Apache License, Version 2.0 (the "License");
-#   you may not use this file except in compliance with the License.
-#   You may obtain a copy of the License at
-
-#       http://www.apache.org/licenses/LICENSE-2.0
-
-#   Unless required by applicable law or agreed to in writing, software
-#   distributed under the License is distributed on an "AS IS" BASIS,
-#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#   See the License for the specific language governing permissions and
-#   limitations under the License.
-
 .DS_Store
-node_modules
-/dist
-
-/test/e2e/videos/
-/test/e2e/screenshots/
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+.env
+!.env.example
+keycloak.json
 tmp
