Map OrderEvent to Symbol

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
   <modules>
     <module>quarkus-stock-quote</module>
     <module>quarkus-portfolio</module>
+    <module>trade-orders-service</module>
   </modules>
   <build>
     <plugins>
