add Makefile, trader-order-manifests

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,5 @@ insert_final_newline = false
 # Use tabs for indentation (Makefiles require tabs)
 indent_style = tab
 indent_size = 2
+trim_trailing_whitespace = false
+insert_final_newline = false
