--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 TRADR_VERSION=0.2
+IMAGE_REPO=quay.io/kameshsampath
+NATIVE_BULID_ARGS=-DskipTests -Dquarkus.native.native-image-xmx=6G -Dquarkus.native.container-build=true -Dquarkus.package.type=native  clean package
