README updates and create portfolio secret using kustomization.yaml

--- a/k8s/stock-quote/base/kustomization.yaml
+++ b/k8s/stock-quote/base/kustomization.yaml
@@ -1,5 +1,13 @@
 ---
+generatorOptions:
+  disableNameSuffixHash: true
+  
+secretGenerator:
+  - name: quarkus-portfolio
+    envs:
+      - api-keys.env
 resources:
   - deployment.yaml
   - service.yaml
+# enable this if you want to expose the stock-quote route to external world
 #  - route.yaml
