(fix) dont mask stock symbol
- add kafka deployment
- mirromaker cr update

--- a/quarkus-portfolio/src/main/resources/application.properties
+++ b/quarkus-portfolio/src/main/resources/application.properties
@@ -19,7 +19,7 @@ quarkus.swagger-ui.always-include=true
 openshift.labels[0].key=app.kubernetes.io/part-of
 openshift.labels[0].value=Quarkus-DayTrader
 # KC WebConsole --> Realm Settings --> OpenId Configuration #issuer
-quarkus.oidc.auth-server-url=https://keycloak.keycloak:8443/auth/realms/stocktrader
+quarkus.oidc.auth-server-url=https://keycloak-keycloak.apps.aws.devx.red/auth/realms/stocktrader
 # If its frontend put real client-id
 quarkus.oidc.client-id=tradr
 # service does not do redirect
