--- a/k8s/stock-quote/base/deployment.yaml
+++ b/k8s/stock-quote/base/deployment.yaml
@@ -21,6 +21,11 @@ spec:
         env:
           - name: PORT
             value: "8080"
+          - name: IEX_API_KEY
+            valueFrom:
+              secretKeyRef:
+                name: quarkus-portfolio
+                key: IEX_API_KEY
         resources:
           limits:
             memory: "512Mi"
