--- a/k8s/tradr/base/deployment.yaml
+++ b/k8s/tradr/base/deployment.yaml
@@ -3,8 +3,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tradr
-  annotations:
+  labels:
     app.kubernetes.io/part-of: Quarkus-DayTrader
+    app.kubernetes.io/name: nodejs
 spec:
   selector:
     matchLabels:
@@ -15,15 +16,15 @@ spec:
         app: tradr
     spec:
       containers:
-      - name: tradr
-        image: quay.io/kameshsampath/tradr
-        imagePullPolicy: Always
-        env:
-          - name: PORT
-            value: "8080"
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-        - containerPort: 8080
+        - name: tradr
+          image: quay.io/kameshsampath/tradr
+          imagePullPolicy: Always
+          env:
+            - name: PORT
+              value: "8080"
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 8080
