--- a/k8s/tradr/pipeline-run.yaml
+++ b/k8s/tradr/pipeline-run.yaml
@@ -9,7 +9,7 @@ spec:
   workspaces:
     - name: shared-workspace
       persistentvolumeclaim:
-        claimName: tradr
+        claimName: tradr-source
   params:
     - name: destination-image
       value: image-registry.openshift-image-registry.svc:5000/daytrader/sampledaytrader8
