--- a/k8s/kafka/base/daytrader-kafka.yaml
+++ b/k8s/kafka/base/daytrader-kafka.yaml
@@ -3,26 +3,34 @@ kind: Kafka
 metadata:
   name: daytrader
 spec:
+  entityOperator:
+    topicOperator: {}
+    userOperator: {}
   kafka:
-    version: 2.5.0
-    replicas: 3
-    listeners:
-      plain: {}
-      tls: {}
-      external:
-        type: loadbalancer
-        tls: false
     config:
+      inter.broker.protocol.version: '2.6'
+      log.message.format.version: '2.6'
       offsets.topic.replication.factor: 3
-      transaction.state.log.replication.factor: 3
       transaction.state.log.min.isr: 2
-      log.message.format.version: '2.5'
+      transaction.state.log.replication.factor: 3
+    listeners:
+      - name: plain
+        port: 9092
+        tls: false
+        type: internal
+      - name: tls
+        port: 9093
+        tls: true
+        type: internal
+      - name: external
+        port: 9094
+        tls: false
+        type: loadbalancer
+    replicas: 3
     storage:
       type: ephemeral
+    version: 2.6.0
   zookeeper:
     replicas: 3
     storage:
       type: ephemeral
-  entityOperator:
-    topicOperator: {}
-    userOperator: {}
