--- a/tradr/.env
+++ b/tradr/.env
@@ -1,5 +1,5 @@
-NODE_ENV=development
-KEYCLOAK_AUTH_URL=https://keycloak-keycloak.apps.aws.devx.red/auth
+NODE_ENV=production
+KEYCLOAK_AUTH_URL=https://keycloak-keycloak.apps.gcp.kameshs.dev/auth
 KEYCLOAK_REALM=stocktrader
 KEYCLOAK_CLIENT_ID=tradr
-APP_PORTFOLIO_API_URL=https://portfolio-daytrader.apps.aws.devx.red/api/portfolios
+APP_PORTFOLIO_API_URL=https://keycloak-keycloak.apps.gcp.kameshs.dev/api/portfolios
