--- a/tradr/.env.example
+++ b/tradr/.env.example
@@ -1,4 +1,5 @@
-KEYCLOAK_AUTH_URL=
-KEYCLOAK_REALM=
-KEYCLOAK_CLIENT_ID=
-APP_PORTFOLIO_API_URL=
+NODE_ENV=production
+KEYCLOAK_AUTH_URL=https://$KEYCLOAK_ROUTE/auth
+KEYCLOAK_REALM=stocktrader
+KEYCLOAK_CLIENT_ID=tradr
+APP_PORTFOLIO_API_URL=https://$KEYCLOAK_ROUTE/api/portfolios
