(refactor) base line v1.0.0
- use jkube plugins to build the images
- organize the poms for quarkus project
- README updates

--- a/k8s/portfolio/base/deployment.yaml
+++ b/k8s/portfolio/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: tradr
-        image: quay.io/kameshsampath/quarkus-portfolio
+        image: quay.io/kameshsampath/quarkus-portfolio:1.0.0
         imagePullPolicy: Always
         env:
           - name: PORT
