--- a/quarkus-stock-quote/src/main/resources/application.properties
+++ b/quarkus-stock-quote/src/main/resources/application.properties
@@ -6,10 +6,10 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=tradedb
 quarkus.datasource.password=tradedb
 quarkus.hibernate-orm.database.generation=drop-and-create
-%dev.quarkus.hibernate-orm.log.sql=true
-quarkus.openshift.env.mapping.IEX_API_KEY.from-secret=quarkus-portfolio
 quarkus.datasource.health.enabled=true
+#TODO remove
 #https://iexcloud.io/ API Key
+%dev.quarkus.hibernate-orm.log.sql=true
 quarkus.openshift.env.mapping.IEX_API_KEY.with-key=IEX_API_KEY
 %dev.dev.kameshs.stocktrader.client.IEXClient/mp-rest/url=https://sandbox.iexapis.com/stable
 dev.kameshs.stocktrader.client.IEXClient/mp-rest/url=https://sandbox.iexapis.com/stable
