--- a/quarkus-portfolio/src/main/resources/application.properties
+++ b/quarkus-portfolio/src/main/resources/application.properties
@@ -13,6 +13,7 @@ dev.kameshs.stocktrader.portfolio.client.StockQuoteClient/mp-rest/url=http://qua
 %dev.dev.kameshs.stocktrader.portfolio.client.StockQuoteClient/mp-rest/url=http://localhost:9090/api/stock
 quarkus.http.cors=true
 quarkus.openshift.env.mapping.IEX_API_KEY.from-secret=quarkus-portfolio
+# TODO remove
 #https://iexcloud.io/ API Key
 quarkus.openshift.env.mapping.IEX_API_KEY.with-key=IEX_API_KEY
 quarkus.swagger-ui.always-include=true
